--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "npm i"
+    "build": "npm i",
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +21,10 @@
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.22.10",
+    "jest": "^29.6.2",
+    "supertest": "^6.3.3"
   }
 }
